<resources>
  <string name="app_name">jAlcoMeter</string>
  <string name="app_description">jAlcoMeter is a tool for monitoring your drinking habits. If you drink, use jAlcoMeter!</string>
  <string name="menu_drink">Drink!</string>
  <string name="menu_prefs">Settings</string>
  <string name="menu_history">History</string>
  <string name="menu_statistics">Statistics</string>
  <string name="menu_delete">Remove</string>
  <string name="menu_modify">Modify</string>
  <string name="menu_show_info">Show info</string>
  <string name="menu_drink_modify">Drink</string>
  <string name="menu_default_drinks">Restore default drinks</string>
  <string name="menu_add_drink">Add a drink</string>
  <string name="menu_add_size">Add a size</string>
  <string name="menu_add_favourite">Add a favorite</string>
  <string name="menu_clear_day">Remove all drinks from this day</string>
  <string name="menu_add_drink_for_day">Add a drink to this day</string>
  <string name="menu_disclaimer">Disclaimer</string>
  <string name="menu_about">About</string>
  <string name="menu_add_category">Add a category</string>
  <string name="menu_show_sizes">Show the sizes</string>
  <string name="menu_quit">Quit</string>
  <string name="menu_help">Help!</string>
  <string name="main_soberity">To sobriety:</string>
  <string name="main_portions">Portions:</string>
  <string name="main_drinking_date">Drinking day:</string>
  <string name="portions">0.0 / 0.0 / 0.0</string>
  <string name="sober">You\'re sober</string>
  <string name="drink_date_def">Mon 1.1.</string>
  <string name="title_disclaimer">Legal disclaimer</string>
  <string name="disclaimer_text"><![CDATA[This application is meant for your amusement, and I do not guarantee that the alcohol levels shown in the application have anything to do with the actual reality. I shall in no event be liable for any direct, indirect, incidental, consequential, or exemplary damages caused by the use of this application or by the consumption of alcohol accompanying the use of this application. This application must not be used in a competitory fashion, especially when you have consumed said alcohol.
    \n\nI am not responsible for the possible intoxication of the users of this application, nor from the consequental hangover. Neither am I responsible for the possible accidents occurring before, during, or after the use of this application. I do not make any guarantees for the preservation of the data collected by jAlcoMeter; after all, software bugs have been known to occur. 
    \n\nI do guarantee, however, that all the data collected by jAlcoMeter stays in your phone - it is never transmitted anywhere. The permissions required by the application are only used for showing the ads, and for purchasing the license.
    \n\nPlease remember that the blood alcohol level shown by this application is based on calculated approximations that in turn are based on the values given by you, the user; and therefore may or may not be close to the actual reality. I in no event guarantee that you are capable of driving a car, even if the application says that this might be the case.]]></string>
  <string name="disclaimer_ok">I understand</string>
  <string name="disclaimer_what">I do not understand</string>
  <string name="disclaimer_readagain">Then read the text again until you do…</string>
  <string name="disclaimer_readtext">Please read the text and state your understanding of it!</string>
  <string name="title_about">About</string>
  <string name="about_copyright">Copyright © 2006–2011\nTuukka Haapasalo</string>
  <string name="about_version_free"><![CDATA[This is the free version of jAlcoMeter. Purchase jAlkaMetri to show your support (and to get rid of the ads)! After you have bought the license, please wait a while until the purchase is confirmed. If you have already bought the license, click \"Check license\".]]></string>
  <string name="about_version_licensed"><![CDATA[This is the licensed full version of jAlcoMeter. Thank you for your support!]]></string>
  <string name="about_stuff"><![CDATA[The icons used in jAlcoMeter have been taken from the Open Clip Art library (http://openclipart.org/) and Open Icon Library (http://openiconlibrary.sourceforge.net/), and the alcohol meter image was made by Anu Haapasalo. Many thanks to the authors!]]></string>
  <string name="about_sourcecode"><![CDATA[jAlcoMeter is hosted in SourceForge and the source codes can be freely downloaded from there. The project is licensed under a GPL license under its Finnish name, jalkametri.
    \n\nBy installing jAlcoMeter from the Android Market you can get it to your phone more conveniently and by purchasing the license (from this page) you also support its development. If you wish to develop a similar application, feel free to use the sources (with the limitations of GPL).]]></string>
  <string name="about_ok">OK!</string>
  <string name="about_check_license">Check license</string>
  <string name="about_buy_license">Buy license</string>
  <string name="billing_service_unavailable">In-app billing does not work for your phone, so you cannot buy the license. Sorry!</string>
  <string name="version_free">Free version</string>
  <string name="version_licensed">Licensed</string>
  <string name="crash_toast_text">jAlcoMeter has crashed!</string>
  <string name="action_drink">Drink!</string>
  <string name="action_save">Save</string>
  <string name="action_ok">OK</string>
  <string name="category_name">Category</string>
  <string name="category_icon">Icon</string>
  <string name="title_select_drink_category">Select category</string>
  <string name="title_select_drink_type">Select drink</string>
  <string name="title_select_drink_size">Select size</string>
  <string name="title_edit_drink_details">Drink details</string>
  <string name="title_preferences">Preferences</string>
  <string name="title_history">History</string>
  <string name="title_confirm">Confirmation</string>
  <string name="title_previous_drinks">Latest drinks</string>
  <string name="title_edit_category">Edit category</string>
  <string name="title_select_size_for_drink">Add drink size</string>
  <string name="title_edit_drink_size">Edit drink size</string>
  <string name="title_wait">Please wait…</string>
  <string name="title_statistics">Statistics</string>
  <string name="confirm_default_drinks">Are you sure you want to reset the drink library to the defaults?</string>
  <string name="confirm_clear_day">Are you sure you want to delete all drinks from this day?</string>
  <string name="confirm_delete_category">Are you sure you want to delete this drink category (including all its drinks)?</string>
  <string name="confirm_delete_drink">Are you sure you wish to delete this drink, alongside with all its sizes?</string>
  <string name="unit_percent">%</string>
  <string name="unit_liter">l</string>
  <string name="unit_deciliter">dl</string>
  <string name="unit_centiliter">cl</string>
  <string name="unit_portions">portions</string>
  <string name="drink_library_reset">Drink library reset…</string>
  <string name="title_drive_status">Your driving condition</string>
  <string name="drive_status_ok">You are probably able to drive.</string>
  <string name="drive_status_maybe">You may be able to drive. You may be sober after %1$s (at %2$s).</string>
  <string name="drive_status_no">You are definitely not in any condition to drive a car! You may be able to drive after %1$s (at %2$s), and you may be sober after %3$s (at %4$s).</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="done">Completed!</string>
  <string name="minute">min</string>
  <string name="hour">h</string>
  <string name="min_pat">%1$02d min</string>
  <string name="hourmin_pat">%1$d h %2$02d min</string>
  <string name="about">About</string>
  <string name="prompt_add_favourite">Add some favorites here from the application menu.</string>
  <string name="msg_initialize_drink_library">Creating default drink library…</string>
  <string name="msg_drink_not_set">Error: the drink has not been set</string>
  <string name="msg_drink_size_not_set">Error: the drink size has not been set</string>
  <string name="title_error">Error</string>
  <string name="msg_billing_not_supported">In-app billing is not supported, so you cannot purchase the jAlcoMeter license.</string>
  <string name="msg_cannot_connect_billing">Cannot connect to billing service; please try again later.</string>
  <string name="msg_purchase_failed">Purchase failed; please try again later. Android Market will not allow you to buy more than one license.</string>
  <string name="msg_purchase_canceled">You canceled the license purchase.</string>
  <string name="title_success">Success</string>
  <string name="msg_purchase_successful">jAlcoMeter has been successfully licensed. Thank you!</string>
  <string name="msg_wait_for_market">Please wait… awaiting purchase response from Market.</string>
  <string name="msg_checking_license">Checking license from Android Market. If you have a license, it will be applied shortly.</string>
  <string name="drink_detail_name">Drink</string>
  <string name="drink_detail_strength">Strength</string>
  <string name="drink_detail_size">Size</string>
  <string name="drink_detail_modify_size">Modify:</string>
  <string name="drink_detail_size_name">Size name</string>
  <string name="drink_detail_size_icon">Size icon</string>
  <string name="drink_detail_time">Drinking time</string>
  <string name="drink_detail_date">Date</string>
  <string name="drink_detail_date_hidden">Date (click to change)</string>
  <string name="drink_detail_icon">Icon</string>
  <string name="drink_detail_comment">Comment</string>
  <string name="drink_detail_comment_hint">Comment</string>
  <string name="prefs_part_general">General preferences</string>
  <string name="prefs_language">Language</string>
  <string name="prefs_language_info">The selected language. Restart jAlcoMeter to update all shown strings.</string>
  <string name="prefs_weight">Weight</string>
  <string name="prefs_weight_info">Your weight (in kilograms). The blood alcohol level is calculated based on this.</string>
  <string name="prefs_week_start">Start of week</string>
  <string name="prefs_week_start_info">On which day does your week start?</string>
  <string name="prefs_gender">Gender</string>
  <string name="prefs_gender_info">Your gender affects the alcohol burning speed.</string>
  <string name="prefs_driving_alcohol_limit">Driving limit</string>
  <string name="prefs_driving_alcohol_limit_info">The blood alcohol level limit for driving a car, per mille. This on 0.5 in Finland.</string>
  <string name="prefs_max_alcohol_level">Max.prom.</string>
  <string name="prefs_max_alcohol_level_info">The maximum per mille count shown by the alcohol meter gauge.</string>
  <string name="prefs_day_change_time">Date changes</string>
  <string name="prefs_day_change_time_info">Drinks drunk before this time (usually in the morning) are registered for the previous day, so that you can continue drinking past midnight.</string>
  <string name="prefs_debug_mode">Debug-mode</string>
  <string name="prefs_debug_mode_info">Shows debugging information on screen.</string>
  <string name="prefs_sounds">Sounds</string>
  <string name="prefs_sounds_info">Sound effects for drinking.</string>
  <string name="prefs_on">On</string>
  <string name="prefs_part_alc_weight">Drink units</string>
  <string name="prefs_standard_drink">Standard drink</string>
  <string name="calc_add_component">Add a component</string>
  <string name="calc_mixture">The mixture</string>
  <string name="calc_str_unit"> %</string>
  <string name="calc_vol_unit"> l</string>
  <string name="calc_portions">Portions</string>
  <string name="calc_add">Add</string>
  <string name="calc_ok">OK</string>
  <string name="calc_clear">Clear</string>
</resources>